# gogogiftlist

./: .env.production.example  .gitignore  AGENT.MD  README.md  STORY.MD  docker-compose.production.yml  docker-compose.yml
.github/workflows/: deploy-lightsail.yml
backend/: Dockerfile  pyproject.toml
backend/app/: middleware.py  settings.py  urls.py
backend/gifts/: __init__.py  admin.py  models.py  tests.py  views.py
backend/gifts/migrations/: 0001_initial.py  0002_giftgiver_account.py
deploy/: Caddyfile
frontend/: Dockerfile  bun.lockb  index.html  package.json
frontend/src/: App.css  App.tsx  index.css
