[project]
name = "gogogiftlist-backend"
version = "0.1.0"
description = "The Django backend for the application"
authors = [
    {name = "Justin Miller",email = "justin@justinmiller.dev"}
]
requires-python = ">=3.12,<4.0"
dependencies = [
    "django (>=6.0.7,<7.0.0)",
    "psycopg (>=3.3.4,<4.0.0)",
    "dj-database-url (>=3.1.2,<4.0.0)",
    "django-environ (>=0.14.0,<0.15.0)",
    "black (>=26.5.1,<27.0.0)",
    "ruff (>=0.15.22,<0.16.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
